syntax = "proto3";

package inputs.v1;

service InputsService {
  // Original: GetInputList
  rpc List(ListRequest) returns (ListResponse);
  // Original: GetInputKindList
  rpc ListKinds(ListKindsRequest) returns (ListKindsResponse);
  // Original: GetSpecialInputNames
  rpc ListSpecial(ListSpecialRequest) returns (ListSpecialResponse);
  // Original: GetInputDefaultSettings
  rpc DefaultSettings(DefaultSettingsRequest) returns (DefaultSettingsResponse);
  // Original: GetInputSettings
  rpc Settings(SettingsRequest) returns (SettingsResponse);
  // Original: SetInputSettings
  rpc SetSettings(SetSettingsRequest) returns (SetSettingsResponse);
  // Original: GetInputMute
  rpc Mute(MuteRequest) returns (MuteResponse);
  // Original: SetInputMute
  rpc SetMute(SetMuteRequest) returns (SetMuteResponse);
  // Original: ToggleInputMute
  rpc ToggleMute(ToggleMuteRequest) returns (ToggleMuteResponse);
  // Original: GetInputVolume
  rpc Volume(VolumeRequest) returns (VolumeResponse);
  // Original: SetInputVolume
  rpc SetVolume(SetVolumeRequest) returns (SetVolumeResponse);
  // Original: GetInputAudioSyncOffset
  rpc AudioSyncOffset(AudioSyncOffsetRequest) returns (AudioSyncOffsetResponse);
  // Original: SetInputAudioSyncOffset
  rpc SetAudioSyncOffset(SetAudioSyncOffsetRequest) returns (SetAudioSyncOffsetResponse);
  // Original: GetInputTracks
  rpc Tracks(TracksRequest) returns (TracksResponse);
  // Original: SetInputTracks
  rpc SetTracks(SetTracksRequest) returns (SetTracksResponse);
  // Original: GetInputMonitorType
  rpc MonitorMode(MonitorModeRequest) returns (MonitorModeResponse);
  // Original: SetInputMonitorType
  rpc SetMonitorMode(SetMonitorModeRequest) returns (SetMonitorModeResponse);
  // Original: GetInputActive
  rpc IsActive(IsActiveRequest) returns (IsActiveResponse);
  // Original: GetInputPropertiesListPropertyItems
  rpc PropertiesListPropertyItems(PropertiesListPropertyItemsRequest) returns (PropertiesListPropertyItemsResponse);
  // Original: PressInputPropertiesButton
  rpc PressPropertiesButton(PressPropertiesButtonRequest) returns (PressPropertiesButtonResponse);
  // Original: SetInputName
  rpc SetName(SetNameRequest) returns (SetNameResponse);
  // Original: CreateInput
  rpc Create(CreateRequest) returns (CreateResponse);
  // Original: DeleteInput
  rpc Remove(RemoveRequest) returns (RemoveResponse);
}

message ListRequest {
  string kind = 1;
}

message ListResponse {
  string kind = 1;
  repeated Input inputs = 2;

  message Input {
    string name = 1;
    string kind = 2;
    string unversioned_kind = 3;
  }
}

message ListKindsRequest {
  bool unversioned = 1;
}

message ListKindsResponse {
  repeated string kinds = 1;
}

message ListSpecialRequest {}

message ListSpecialResponse {}

message DefaultSettingsRequest {
  string kind = 1;
}

message DefaultSettingsResponse {
  string defaults = 1;
}

message SettingsRequest {
  string name = 1;
}

message SettingsResponse {
  string kind = 1;
  string settings = 2;
}

message SetSettingsRequest {}

message SetSettingsResponse {}

message MuteRequest {
  string name = 1;
}

message MuteResponse {
  bool muted = 1;
}

message SetMuteRequest {
  string name = 1;
  bool muted = 2;
}

message SetMuteResponse {}

message ToggleMuteRequest {
  string name = 1;
}

message ToggleMuteResponse {
  bool muted = 1;
}

message VolumeRequest {
  string name = 1;
}

message VolumeResponse {
  float mul = 1;
  float db = 2;
}

message SetVolumeRequest {
  string name = 1;

  oneof volume {
    float mul = 2;
    float db = 3;
  }
}

message SetVolumeResponse {}

message AudioSyncOffsetRequest {}

message AudioSyncOffsetResponse {}

message SetAudioSyncOffsetRequest {}

message SetAudioSyncOffsetResponse {}

message TracksRequest {}

message TracksResponse {}

message SetTracksRequest {}

message SetTracksResponse {}

message MonitorModeRequest {}

message MonitorModeResponse {}

message SetMonitorModeRequest {}

message SetMonitorModeResponse {}

message IsActiveRequest {}

message IsActiveResponse {}

message PropertiesListPropertyItemsRequest {}

message PropertiesListPropertyItemsResponse {}

message PressPropertiesButtonRequest {}

message PressPropertiesButtonResponse {}

message SetNameRequest {}

message SetNameResponse {}

message CreateRequest {}

message CreateResponse {}

message RemoveRequest {}

message RemoveResponse {}
